# parameter

./: .gitignore  CMakeLists.txt  Parameter.sln  Parameter.vcxproj  Parameter.vcxproj.filters  README.md  main.cpp  parameter.hpp
include/: parameter.hpp  parameter.inl
src/: parameter.cpp
tests/: test_main.cpp
